# shell-tools-mcp

./: README.md  pyproject.toml
src/shell_tools_mcp_server/: server.py
