[project]
name = "shell-tools-mcp-server"
version = "0.1.0"
description = "MCP server for shell tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "rich",
]

[project.scripts]
shell-tools-mcp-server = "shell_tools_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
